tests/transpiler/x/pl/map_assign.out
ERROR: /workspace/mochi/tests/transpiler/x/pl/map_assign.pl:2: Initialization goal raised exception:
ERROR: Type error: `nonneg' expected, found `"bob"' (a string)
